split API url
